--- a/unittests/contracts.hpp.in
+++ b/unittests/contracts.hpp.in
@@ -52,6 +52,7 @@ namespace eosio {
          MAKE_READ_WASM_ABI(test_api_db,          test_api_db,          test-contracts)
          MAKE_READ_WASM_ABI(test_api_multi_index, test_api_multi_index, test-contracts)
          MAKE_READ_WASM_ABI(test_ram_limit,       test_ram_limit,       test-contracts)
+         MAKE_READ_WASM_ABI(ram_restriction_test, ram_restriction_test, test-contracts)
       };
    } /// eosio::testing
 }  /// eosio
