add principal macro for test executable and then use that for add_eosio_test

--- a/CMakeModules/EosioTester.cmake.in
+++ b/CMakeModules/EosioTester.cmake.in
@@ -73,7 +73,7 @@ find_library(GMP_LIBRARIES NAMES libgmp.a gmp.lib gmp libgmp-10 mpir
     DOC "Path to the GMP library"
 )
 
-macro(add_eosio_test test_name)
+macro(add_eosio_test_executable test_name)
    add_executable( ${test_name} ${ARGN} )
    target_link_libraries( ${test_name}
        ${LLVM}
@@ -139,8 +139,9 @@ macro(add_eosio_test test_name)
 
    #Manually run unit_test for all supported runtimes
    #To run unit_test with all log from blockchain displayed, put --verbose after --, i.e. unit_test -- --verbose
-   add_test(NAME ${test_name}_binaryen COMMAND ${test_name}
-    --report_level=detailed --color_output -- --binaryen)
-   add_test(NAME ${test_name}_wavm COMMAND ${test_name}
-    --report_level=detailed --color_output --catch_system_errors=no -- --wavm)
+endmacro()
+
+macro(add_eosio_test test_name)
+   add_eosio_test_executable( ${test_name} ${ARGN} )
+   add_test(NAME ${test_name} COMMAND ${test_name} --report_level=detailed --color_output)
 endmacro()
