--- a/CMakeModules/EosioTesterBuild.cmake.in
+++ b/CMakeModules/EosioTesterBuild.cmake.in
@@ -72,7 +72,7 @@ find_library(GMP_LIBRARIES NAMES libgmp.a gmp.lib gmp libgmp-10 mpir
     DOC "Path to the GMP library"
 )
 
-macro(add_eosio_test test_name)
+macro(add_eosio_test_executable test_name)
    add_executable( ${test_name} ${ARGN} )
    target_link_libraries( ${test_name}
        ${LLVM}
@@ -145,6 +145,11 @@ macro(add_eosio_test test_name)
     --report_level=detailed --color_output -- --binaryen)
    add_test(NAME ${test_name}_wavm COMMAND ${test_name}
     --report_level=detailed --color_output --catch_system_errors=no -- --wavm)
+endmacro()
+
+macro(add_eosio_test test_name)
+   add_eosio_test_executable( ${test_name} ${ARGN} )
+   add_test(NAME ${test_name} COMMAND ${test_name} --report_level=detailed --color_output)
 endmacro()
 
 if(ENABLE_COVERAGE_TESTING)
