--- a/CMakeModules/EosioTester.cmake.in
+++ b/CMakeModules/EosioTester.cmake.in
@@ -128,7 +128,6 @@ macro(add_eosio_test_executable test_name)
        ${PLATFORM_SPECIFIC_LIBS}
       )
 
-   #### TODO /usr/local/include is a hack for fc and some other includes
    target_include_directories( ${test_name} PUBLIC
                                ${Boost_INCLUDE_DIRS}
                                @OPENSSL_INCLUDE_DIR@
@@ -137,11 +136,13 @@ macro(add_eosio_test_executable test_name)
                                @CMAKE_INSTALL_FULL_INCLUDEDIR@/wasm-jit
                                @CMAKE_INSTALL_FULL_INCLUDEDIR@/softfloat )
 
-   #Manually run unit_test for all supported runtimes
-   #To run unit_test with all log from blockchain displayed, put --verbose after --, i.e. unit_test -- --verbose
 endmacro()
 
 macro(add_eosio_test test_name)
    add_eosio_test_executable( ${test_name} ${ARGN} )
+   #This will generate a test with the default runtime
    add_test(NAME ${test_name} COMMAND ${test_name} --report_level=detailed --color_output)
+
+   #Manually run unit_test for all supported runtimes
+   #To run unit_test with all log from blockchain displayed, put --verbose after --, i.e. unit_test -- --verbose
 endmacro()
