--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,7 +1,7 @@
 steps:
   - command: | # Ubuntu 16.04 Build
         echo "+++ :hammer: Building"
-        ./scripts/eosio_build.sh -y -p
+        ./scripts/eosio_build.sh -y -P
         echo "--- :compression: Compressing build directory"
         tar -pczf build.tar.gz build/; if [ ! -f build.tar.gz ]; then echo "No TAR Found!" && exit 1; fi
     label: ":ubuntu: 16.04 Build"
@@ -22,7 +22,7 @@ steps:
 
   - command: | # Ubuntu 18.04 Build
         echo "+++ :hammer: Building"
-        ./scripts/eosio_build.sh -y -p
+        ./scripts/eosio_build.sh -y -P
         echo "--- :compression: Compressing build directory"
         tar -pczf build.tar.gz build/; if [ ! -f build.tar.gz ]; then echo "No TAR Found!" && exit 1; fi
     label: ":ubuntu: 18.04 Build"
@@ -43,7 +43,7 @@ steps:
 
   - command: | # CentOS 7 Build
         echo "+++ :hammer: Building"
-        ./scripts/eosio_build.sh -y -p
+        ./scripts/eosio_build.sh -y -P
         echo "--- :compression: Compressing build directory"
         tar -pczf build.tar.gz build/; if [ ! -f build.tar.gz ]; then echo "No TAR Found!" && exit 1; fi
     label: ":centos: 7 Build"
@@ -64,7 +64,7 @@ steps:
 
   - command: | # Amazon Linux 2 Build
         echo "+++ :hammer: Building"
-        ./scripts/eosio_build.sh -y -p
+        ./scripts/eosio_build.sh -y -P
         echo "--- :compression: Compressing build directory"
         tar -pczf build.tar.gz build/; if [ ! -f build.tar.gz ]; then echo "No TAR Found!" && exit 1; fi
     label: ":aws: 2 Build"
@@ -87,7 +87,7 @@ steps:
       echo "--- Creating symbolic link to job directory :file_folder:"
       sleep 5 && ln -s "$(pwd)" /data/job && cd /data/job
       echo "+++ Building :hammer:"
-      ./scripts/eosio_build.sh -y -p
+      ./scripts/eosio_build.sh -y -P
       echo "--- Compressing build directory :compression:"
       tar -pczf build.tar.gz build/; if [ ! -f build.tar.gz ]; then echo "No TAR Found!" && exit 1; fi
     label: ":darwin: Mojave Build"
